Add tags styles

--- a/src/gulp/src/plann/less/tasks/base.less
+++ b/src/gulp/src/plann/less/tasks/base.less
@@ -73,3 +73,13 @@ body {
     background-color: #colors[accent-green];
   }
 }
+
+
+.task-tag {
+  width: max-content;
+  border: 1px solid #colors[accent-grey];
+  border-radius: 4px;
+  padding: 2px;
+  margin: 2px;
+  display: inline-block;
+}
