--- a/src/gulp/src/plann/less/tasks/base.less
+++ b/src/gulp/src/plann/less/tasks/base.less
@@ -83,3 +83,13 @@ body {
   margin: 2px;
   display: inline-block;
 }
+
+
+.pseudo {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
