--- a/src/gulp/src/plann/less/tasks/stack.less
+++ b/src/gulp/src/plann/less/tasks/stack.less
@@ -23,23 +23,14 @@
   right: -12px;
   cursor: pointer;
 
-  .pseudo {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-  }
-
   &:hover:before{
-    .tasks-stack-header-filter.pseudo();
+    .pseudo();
     clip-path: polygon(0% 0%,100% 0%,100% 10%,70% 50%,70% 85%,40% 100%,30% 100%,30% 50%,0% 10%);
     background-color: #colors[accent-yellow];
   }
 
   &:after{
-    .tasks-stack-header-filter.pseudo();
+    .pseudo();
     clip-path: polygon(10% 10%,90% 10%,60% 50%,60% 80%,40% 90%,40% 50%);
     background-color: #colors[primary-black];
   }
@@ -109,6 +100,29 @@
 
   &-tags {
     width: 10%;
+    position: relative;
+
+    &-change {
+      top: .5em;
+      right: .5em;
+      position: absolute;
+      width: 1.5em;
+      height: 1.5em;
+      background-color: #colors[accent-yellow];
+      border-radius: 4px;
+      cursor: pointer;
+      display: none;
+
+      &:after {
+        .pseudo();
+        clip-path: polygon(10% 90%,10% 70%,70% 10%,90% 30%,30% 90%);
+        background-color: #colors[primary-black];
+      }
+    }
+
+    &:hover > &-change {
+      display: block;
+    }
   }
 }
 
