Add form styles

--- a/src/gulp/src/plann/less/tasks/base.less
+++ b/src/gulp/src/plann/less/tasks/base.less
@@ -93,3 +93,10 @@ body {
   top: 0px;
   left: 0px;
 }
+
+
+.form-submit-button-box {
+  width:max-content;
+  margin:auto;
+  padding:10px 5px 0
+}
