Add header status filter button #2

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -8,7 +8,10 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-  <div id="creation-button"></div>
+  <div id="header">
+    <div id="creation-button"></div>
+    <div id="status-filter-button"></div>
+  </div>
 
   <div id="tasks-stack">
     <div id="tasks-stack-header">
