--- a/src/gulp/src/plann/less/tasks/button.less
+++ b/src/gulp/src/plann/less/tasks/button.less
@@ -1,10 +1,15 @@
-.button-default {
-  background-color: #colors[accent-yellow];
+.button {
+  width: max-content;
+  padding: 5px;
   border-style: unset;
   border-radius: 4px;
   cursor: pointer;
 
-  &:hover {
-    background-color: #colors[accent-yellow-dark];
+  &-default {
+    background-color: #colors[accent-yellow];
+
+    &:hover {
+      background-color: #colors[accent-yellow-dark];
+    }
   }
 }
