Add header priority filter button #2

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -11,6 +11,7 @@
   <div id="header">
     <div id="creation-button"></div>
     <div id="status-filter-button"></div>
+    <div id="priority-filter-button"></div>
   </div>
 
   <div id="tasks-stack">
