--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -8,11 +8,7 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-  <div id="header">
-    <div id="creation-button"></div>
-    <div id="status-filter-button"></div>
-    <div id="priority-filter-button"></div>
-  </div>
+  <div id="header"></div>
 
   <div id="tasks-stack">
     <div id="tasks-stack-header">
