Add dialogs class

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -20,11 +20,7 @@
     <div id="tasks-stack-items"></div>
   </div>
 
-  <div id="change-status-dialog"></div>
-  <div id="change-tags-dialog"></div>
-  <div id="filter-status-dialog"></div>
-  <div id="filter-priority-dialog"></div>
-  <div id="creation-dialog"></div>
+  <div id="dialogs"></div>
 
   <div id="wait-screen"></div>
 {% endblock %}
