--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -10,20 +10,20 @@
 
     .task-item {
       width: 20%;
-      height: 200px;
+      /* height: 200px; */
       padding: 10px;
     }
 
     .task-item-inner {
       width: 100%;
       height: 100%;
-      border-radius: 5%;
+      border-radius: 5px;
       background-color: #f9f4d3;
     }
 
     .task-item-inner-priority {
       width: 100%;
-      height: 10%;
+      height: 1em;
     }
 
     .task-item-inner-priority-values {
@@ -42,6 +42,42 @@
       width: 50%;
       height: 50%;
       margin: 25%;
+    }
+
+    .task-item-inner-meaning {
+      width: 100%;
+      height: 2em;
+      padding: 0 10%;
+      box-sizing: border-box;
+    }
+
+    .task-item-inner-meaning-values {
+      width: max-content;
+      max-width: 100%;
+      height: 100%;
+      margin: 0 auto;
+      position: relative;
+    }
+
+    .task-item-inner-meaning-name {
+      width: max-content;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .task-item-inner-meaning-name > div {
+      margin: 0.4em 0 0;
+    }
+
+    .task-item-inner-meaning-description {
+      width: 15px;
+      height: 15px;
+      background-color: #fff;
+      position: absolute;
+      top: -2px;
+      right: -18px;
+      border-radius: 50%;
+      cursor: pointer;
     }
   </style>
 {% endblock %}
@@ -73,6 +109,19 @@
             </div>
           </div>
         </div>
+
+        <div class="task-item-inner-meaning">
+          <div class="task-item-inner-meaning-values">
+            <div class="task-item-inner-meaning-name">
+              <div>Qwerty</div>
+            </div>
+            <div class="task-item-inner-meaning-description" title="lkjh as
+            weo">
+              <div>i</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -94,6 +143,15 @@
             </div>
           </div>
         </div>
+
+        <div class="task-item-inner-meaning">
+          <div class="task-item-inner-meaning-values">
+            <div class="task-item-inner-meaning-name">
+              <div>Qwerty</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -112,6 +170,15 @@
             </div>
           </div>
         </div>
+
+        <div class="task-item-inner-meaning">
+          <div class="task-item-inner-meaning-values">
+            <div class="task-item-inner-meaning-name">
+              <div>Qwerty</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -127,6 +194,15 @@
             </div>
           </div>
         </div>
+
+        <div class="task-item-inner-meaning">
+          <div class="task-item-inner-meaning-values">
+            <div class="task-item-inner-meaning-name">
+              <div>Qwerty</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -139,6 +215,15 @@
             </div>
           </div>
         </div>
+
+        <div class="task-item-inner-meaning">
+          <div class="task-item-inner-meaning-values">
+            <div class="task-item-inner-meaning-name">
+              <div>Qwerty</div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
