Improve new item meaning #1

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -10,8 +10,8 @@
 
     .task-item {
       width: 20%;
-      /* height: 200px; */
       padding: 10px;
+      box-sizing: border-box;
     }
 
     .task-item-inner {
@@ -49,35 +49,18 @@
       height: 2em;
       padding: 0 10%;
       box-sizing: border-box;
-    }
-
-    .task-item-inner-meaning-values {
-      width: max-content;
-      max-width: 100%;
-      height: 100%;
-      margin: 0 auto;
       position: relative;
     }
 
     .task-item-inner-meaning-name {
-      width: max-content;
-      height: 100%;
+      width: 100%;
+      margin: 0.4em 0 0;
       overflow: hidden;
     }
 
     .task-item-inner-meaning-name > div {
-      margin: 0.4em 0 0;
-    }
-
-    .task-item-inner-meaning-description {
-      width: 15px;
-      height: 15px;
-      background-color: #fff;
-      position: absolute;
-      top: -2px;
-      right: -18px;
-      border-radius: 50%;
-      cursor: pointer;
+      margin: 0 auto;
+      width: max-content;
     }
   </style>
 {% endblock %}
@@ -111,13 +94,9 @@
         </div>
 
         <div class="task-item-inner-meaning">
-          <div class="task-item-inner-meaning-values">
-            <div class="task-item-inner-meaning-name">
-              <div>Qwerty</div>
-            </div>
-            <div class="task-item-inner-meaning-description" title="lkjh as
-            weo">
-              <div>i</div>
+          <div class="task-item-inner-meaning-name">
+            <div>
+              Qwerty
             </div>
           </div>
         </div>
@@ -145,9 +124,9 @@
         </div>
 
         <div class="task-item-inner-meaning">
-          <div class="task-item-inner-meaning-values">
-            <div class="task-item-inner-meaning-name">
-              <div>Qwerty</div>
+          <div class="task-item-inner-meaning-name">
+            <div>
+              Qwerty
             </div>
           </div>
         </div>
@@ -172,9 +151,9 @@
         </div>
 
         <div class="task-item-inner-meaning">
-          <div class="task-item-inner-meaning-values">
-            <div class="task-item-inner-meaning-name">
-              <div>Qwerty</div>
+          <div class="task-item-inner-meaning-name">
+            <div>
+              Qwerty
             </div>
           </div>
         </div>
@@ -196,9 +175,9 @@
         </div>
 
         <div class="task-item-inner-meaning">
-          <div class="task-item-inner-meaning-values">
-            <div class="task-item-inner-meaning-name">
-              <div>Qwerty</div>
+          <div class="task-item-inner-meaning-name">
+            <div>
+              Qwerty
             </div>
           </div>
         </div>
@@ -217,9 +196,9 @@
         </div>
 
         <div class="task-item-inner-meaning">
-          <div class="task-item-inner-meaning-values">
-            <div class="task-item-inner-meaning-name">
-              <div>Qwerty</div>
+          <div class="task-item-inner-meaning-name">
+            <div>
+              Qwerty
             </div>
           </div>
         </div>
