--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -8,6 +8,7 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       grid-gap: 10px;
+      margin: 10px 0;
     }
 
     .task-item {
@@ -49,20 +50,26 @@
     .task-item-inner-meaning {
       width: 100%;
       height: 2em;
-      padding: 0 10%;
+      padding: 0.2em 0 10%;
       box-sizing: border-box;
       position: relative;
     }
 
     .task-item-inner-meaning-name {
       width: 100%;
-      margin: 0.4em 0 0;
       overflow: hidden;
     }
 
     .task-item-inner-meaning-name > div {
       margin: 0 auto;
       width: max-content;
+    }
+
+    .task-item-inner-status {
+      width: 100%;
+      height: 0.5em;
+      border-bottom-left-radius: inherit;
+      border-bottom-right-radius: inherit;
     }
   </style>
 {% endblock %}
@@ -103,6 +110,8 @@
           </div>
         </div>
 
+        <div class="task-item-inner-status tasks-stack-item-status-ip">
+        </div>
       </div>
     </div>
 
@@ -133,6 +142,8 @@
           </div>
         </div>
 
+        <div class="task-item-inner-status tasks-stack-item-status-ns">
+        </div>
       </div>
     </div>
 
@@ -160,6 +171,8 @@
           </div>
         </div>
 
+        <div class="task-item-inner-status tasks-stack-item-status-dn">
+        </div>
       </div>
     </div>
 
@@ -184,6 +197,8 @@
           </div>
         </div>
 
+        <div class="task-item-inner-status tasks-stack-item-status-cl">
+        </div>
       </div>
     </div>
 
@@ -205,6 +220,8 @@
           </div>
         </div>
 
+        <div class="task-item-inner-status tasks-stack-item-status-ip">
+        </div>
       </div>
     </div>
   </div>
