Improve status and priority names

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -114,7 +114,8 @@
   <div class="task-items">
     <div class="task-item">
       <div class="task-item-priority">
-        <div class="task-item-priority-values">
+        <div class="task-item-priority-values"
+             title="Critical">
           <div class="task-item-priority-value">
             <div class="task-item-priority-value-4"></div>
           </div>
@@ -148,7 +149,8 @@
 
     <div class="task-item">
       <div class="task-item-priority">
-        <div class="task-item-priority-values">
+        <div class="task-item-priority-values"
+             title="High">
           <div class="task-item-priority-value">
             <div class="task-item-priority-value-3"></div>
           </div>
@@ -179,7 +181,8 @@
 
     <div class="task-item">
       <div class="task-item-priority">
-        <div class="task-item-priority-values">
+        <div class="task-item-priority-values"
+             title="Normal">
           <div class="task-item-priority-value">
             <div class="task-item-priority-value-2"></div>
           </div>
@@ -207,7 +210,8 @@
 
     <div class="task-item">
       <div class="task-item-priority">
-        <div class="task-item-priority-values">
+        <div class="task-item-priority-values"
+             title="Low">
           <div class="task-item-priority-value">
             <div class="task-item-priority-value-1"></div>
           </div>
@@ -232,7 +236,8 @@
 
     <div class="task-item">
       <div class="task-item-priority">
-        <div class="task-item-priority-values">
+        <div class="task-item-priority-values"
+             title="Not setted">
           <div class="task-item-priority-value">
             <div class="task-item-priority-value-0"></div>
           </div>
