Add new items pointing #1

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -18,6 +18,12 @@
       border-radius: 5px;
       background-color: #f9f4d3;
       min-width: 0;
+      cursor: pointer;
+    }
+    .task-item:hover {
+      position: relative;
+      top: -5px;
+      box-shadow: 0 3px 3px #888;
     }
 
     .task-item-priority {
