Add app component #1

--- a/src/django/plann/templates/plann/tasks.html
+++ b/src/django/plann/templates/plann/tasks.html
@@ -115,8 +115,6 @@
 {% block title %}Tasks{% endblock %}
 
 {% block content %}
-  <div id="header"></div>
-
   <div class="task-items">
     <div class="task-item">
       <div class="task-item-priority">
@@ -264,11 +262,7 @@
     </div>
   </div>
 
-  <div id="tasks-stack"></div>
-
-  <div id="dialogs"></div>
-
-  <div id="wait-screen"></div>
+  <div id="app"></div>
 {% endblock %}
 
 {% block scripts %}
