Improve new items status #1

--- a/src/gulp/src/plann/less/tasks/form.less
+++ b/src/gulp/src/plann/less/tasks/form.less
@@ -1,6 +1,6 @@
-#change-tags-form select {
-  width: 100%;
-}
+// #change-tags-form select {
+//   width: 100%;
+// }
 
 
 .form-submit-button-box {
