--- a/src/gulp/src/plann/less/tasks/items.less
+++ b/src/gulp/src/plann/less/tasks/items.less
@@ -67,7 +67,7 @@
   &-meaning {
     width: 100%;
     height: 2em;
-    padding: 0.3em 0 10%;
+    padding: 0.3em 0 0 0;
     box-sizing: border-box;
     position: relative;
     min-width: 0;
@@ -108,4 +108,35 @@
       clip-path: polygon(0% 0%, 100% 0%, 100% 45%, 0% 45%, 0% 55%, 100% 55%, 100% 100%, 0% 100%);
     }
   }
+}
+
+
+@media (min-device-width: 200px) {
+    .task-items {
+      grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media (min-device-width: 400px) {
+    .task-items {
+      grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-device-width: 600px) {
+    .task-items {
+      grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (min-device-width: 800px) {
+    .task-items {
+      grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (min-device-width: 1000px) {
+    .task-items {
+      grid-template-columns: repeat(5, 1fr);
+    }
 }
