Add task priority component #3

--- a/src/django/plann/templates/plann/task.html
+++ b/src/django/plann/templates/plann/task.html
@@ -14,6 +14,7 @@
 {% block scripts %}
   <script type="text/javascript">
     {% autoescape off %}
+      const CHOISES = JSON.parse('{{ choices }}');
       const TASK_DATA = JSON.parse(String.raw`{{ task_data }}`);
     {% endautoescape %}
   </script>
