Add task status component #3

--- a/src/gulp/src/plann/less/task/main.less
+++ b/src/gulp/src/plann/less/task/main.less
@@ -31,4 +31,22 @@
       background-color: #colors[accent-red-light];
     }
   }
+
+  &-status {
+    &-ns {
+      background-color: #colors[accent-grey-lighter];
+    }
+
+    &-ip {
+      background-color: #colors[accent-yellow];
+    }
+
+    &-cl {
+      background-color: #colors[accent-red-lighter];
+    }
+
+    &-dn {
+      background-color: #colors[accent-green-lighter];;
+    }
+  }
 }
