--- a/src/gulp/src/plann/less/base/main.less
+++ b/src/gulp/src/plann/less/base/main.less
@@ -51,19 +51,19 @@
     }
   }
 
-  &-ns {
-    background-color: #colors[accent-grey-lighter];
-  }
-
-  &-ip {
-    background-color: #colors[accent-yellow];
-  }
-
-  &-cl {
+  &-0 {
     background-color: #colors[accent-red-lighter];
   }
 
-  &-dn {
+  &-1 {
     background-color: #colors[accent-green-lighter];;
+  }
+
+  &-2 {
+    background-color: #colors[accent-grey-lighter];
+  }
+
+  &-3 {
+    background-color: #colors[accent-yellow];
   }
 }
