--- a/src/gulp/src/plann/less/tasks/items.less
+++ b/src/gulp/src/plann/less/tasks/items.less
@@ -91,23 +91,23 @@
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
 
-    &-ns {
-      background-color: #colors[accent-grey-lighter];
+    &-0 {
+      background-color: #colors[accent-red-lighter];
+      clip-path: polygon(0% 0%, 100% 0%, 100% 45%, 0% 45%, 0% 55%, 100% 55%, 100% 100%, 0% 100%);
     }
 
-    &-ip {
-      background-color: #colors[accent-yellow];
-      clip-path: polygon(0% 0%, 49.5% 0%, 49.5% 100%, 50.5% 100%, 50.5% 0%, 100% 0%, 100% 100%, 0% 100%);
-    }
-
-    &-dn {
+    &-1 {
       background-color: #colors[accent-green-lighter];
       clip-path: polygon(0% 0%, 44.5% 0%, 44.5% 100%, 45.5% 100%, 45.5% 0%, 54.5% 0%, 54.5% 100%, 55.5% 100%, 55.5% 0%, 100% 0%, 100% 100%, 0% 100%);
     }
 
-    &-cl {
-      background-color: #colors[accent-red-lighter];
-      clip-path: polygon(0% 0%, 100% 0%, 100% 45%, 0% 45%, 0% 55%, 100% 55%, 100% 100%, 0% 100%);
+    &-2 {
+      background-color: #colors[accent-grey-lighter];
+    }
+
+    &-3 {
+      background-color: #colors[accent-yellow];
+      clip-path: polygon(0% 0%, 49.5% 0%, 49.5% 100%, 50.5% 100%, 50.5% 0%, 100% 0%, 100% 100%, 0% 100%);
     }
   }
 }
