--- a/src/gulp/src/plann/less/task/main.less
+++ b/src/gulp/src/plann/less/task/main.less
@@ -8,6 +8,18 @@
 }
 
 
+.task-changeble-item {
+  cursor: pointer;
+  width: max-content;
+  height: max-content;
+  padding: 5px;
+
+  &:hover {
+    background-color: #colors[accent-yellow];
+  }
+}
+
+
 .task-badge {
   width: max-content;
   height: max-content;
