--- a/src/gulp/src/plann/less/tasks/header.less
+++ b/src/gulp/src/plann/less/tasks/header.less
@@ -1,7 +1,8 @@
-#header {
+#header, #header-filters {
   display: flex;
+}
 
-  & > div {
-    margin: 0 5px;
-  }
+
+.header-item {
+  margin: 0 5px;
 }
