Unify page structures

--- a/src/gulp/src/plann/less/task/main.less
+++ b/src/gulp/src/plann/less/task/main.less
@@ -1,8 +1,8 @@
-@import "../base/main";
 @import "../../../base/less/base/main";
+@import "../base/main";
 
 
-#app {
+#content {
   width: 50%;
   margin: 0 auto;
 }
