--- a/src/gulp/src/plann/less/base/header.less
+++ b/src/gulp/src/plann/less/base/header.less
@@ -1,3 +1,13 @@
+#header, #header-filters {
+  display: flex;
+}
+
+
+.header-item {
+  margin: 0 5px;
+}
+
+
 .filter-button {
   position: relative;
   padding-right: 20px;
