--- a/src/gulp/src/plann/less/base/header.less
+++ b/src/gulp/src/plann/less/base/header.less
@@ -1,4 +1,4 @@
-#header, #header-filters {
+#header, #header > div {
   display: flex;
 }
 
@@ -20,4 +20,11 @@
     clip-path: polygon(1px 28%,17px 28%,11px 48%,11px 67%,7px 72%,7px 48%);
     background-color: #222;
   }
+}
+
+
+.search-input {
+  border-radius: 1em;
+  border: 0.5px solid #555;
+  padding: 5px 10px;
 }
