Improve mobile dialogs

--- a/src/gulp/src/plann/less/base/main.less
+++ b/src/gulp/src/plann/less/base/main.less
@@ -68,3 +68,16 @@
     background-color: #colors[accent-yellow];
   }
 }
+
+
+@media (max-device-width: 299px) {
+    .dialog-window-content {
+      font-size: 50px;
+    }
+}
+
+@media (max-device-width: 499px) {
+    .dialog-window-content {
+      font-size: 50px;
+    }
+}
