--- a/src/gulp/src/plann/less/base/header.less
+++ b/src/gulp/src/plann/less/base/header.less
@@ -3,6 +3,13 @@
 }
 
 
+#header-logo > a {
+  font-size: 24px;
+  color: black;
+  text-decoration: none;
+}
+
+
 .header-item {
   margin: 0 5px;
 }
